Bug 1270149 - Don't clobber options when using a template. r=mkmelin